--- a/style.css
+++ b/style.css
@@ -159,5 +159,4 @@ button:hover {
   background-color: #66bbff;
   color: #000;
 }
-.footer {
-    margin-top: 20px;
+footer { width: 100%; height: 60px; background-color: #999; position: absolute; bottom: 0; }
