--- a/style.css
+++ b/style.css
@@ -164,10 +164,10 @@ button:hover {
   bottom: 0;
   width: 100%;
   text-align: center;
-  padding: 12px;
+  padding: 6px 12px;
   background-color: #111;
   border-top: 2px solid var(--border-color);
-  font-size: 10px;
+  font-size: 12px;
   color: #00ffff;
   box-shadow: 0 -2px 10px #00000088;
 }
