--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ button:hover {
   bottom: 0;
   width: 100%;
   text-align: center;
+  height: 40px;
   padding: 0px 12px;
   background-color: #111;
   border-top: 2px solid var(--border-color);
