--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ button:hover {
   font-size: 15px;
   color: #00ffff;
   box-shadow: 0 -2px 10px #00000088;
+  margin-top: 20px;
 }
 
 .footer a,
