--- a/style.css
+++ b/style.css
@@ -173,5 +173,15 @@ button:hover {
   margin-top: 20px;
 }
 
+.footer a,
+.footer a:visited {
+  color: #00ffff !important;
+  text-decoration: none;
+}
+
+.footer a:hover {
+  text-decoration: underline;
+}
+
 
 
