--- a/style.css
+++ b/style.css
@@ -158,6 +158,7 @@ button:hover {
 .copy-btn:hover {
   background-color: #66bbff;
   color: #000;
+  }
 .footer {
   width: 100%;
   text-align: center;
